Fixed x/y bug in RecordForLocation.  Moved locating settings into editable settings.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,5 +8,8 @@
         <attr name="metaButtonBarStyle" format="reference" />
         <attr name="metaButtonBarButtonStyle" format="reference" />
     </declare-styleable>
+    <declare-styleable name="EditTextPreferenceWithSummary">
+        <attr name="summary_format" format="string" />
+    </declare-styleable>
 
 </resources>
