--- a/app/src/main/res/menu/record.xml
+++ b/app/src/main/res/menu/record.xml
@@ -2,14 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".RecordActivity" >
 
-    <item android:id="@+id/menu_select_location"
-        android:title="Select Location"
-        android:showAsAction="never" />
-
-    <item android:id="@+id/menu_select_level"
-        android:title="Select Level"
-        android:showAsAction="never" />
-
     <item android:id="@+id/menu_locate"
         android:title="Locate Mode"
         android:showAsAction="ifRoom" />
@@ -18,6 +10,26 @@
         android:title="Record Mode"
         android:showAsAction="ifRoom"
         android:enabled="false"/>
+
+    <item android:id="@+id/menu_auto_scroll"
+        android:checkable="true"
+        android:checked="true"
+        android:title="Auto scroll"
+        android:showAsAction="never"
+        android:enabled="true"/>
+
+    <item android:id="@+id/menu_reset_location"
+        android:title="Reset location"
+        android:showAsAction="ifRoom"
+        android:enabled="true"/>
+
+    <item android:id="@+id/menu_select_location"
+        android:title="Select Location"
+        android:showAsAction="never" />
+
+    <item android:id="@+id/menu_select_level"
+        android:title="Select Level"
+        android:showAsAction="never" />
 
     <item android:id="@+id/menu_continuous_record"
         android:title="Continuous Record"
