All bugs and TODOs from 20/5 completed.  Ready for next real test.

--- a/app/src/main/res/menu/record.xml
+++ b/app/src/main/res/menu/record.xml
@@ -16,12 +16,12 @@
         android:checked="true"
         android:title="Auto scroll"
         android:showAsAction="never"
-        android:enabled="true"/>
+        android:enabled="false"/>
 
     <item android:id="@+id/menu_reset_location"
         android:title="Reset location"
-        android:showAsAction="ifRoom"
-        android:enabled="true"/>
+        android:showAsAction="never"
+        android:enabled="false"/>
 
     <item android:id="@+id/menu_select_location"
         android:title="Select Location"
