Added route finding

--- a/app/src/main/res/layout/activity_search_shop.xml
+++ b/app/src/main/res/layout/activity_search_shop.xml
@@ -19,10 +19,31 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Category" />
+            android:text="Select category:" />
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/shop_search_category" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select shop:" />
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/shop_search_shopname" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show on map"
+            android:id="@+id/shop_search_btn_show"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Get directions"
+            android:id="@+id/shop_search_btn_directions"/>
+
     </LinearLayout>
 </RelativeLayout>
